Progress on creating a hello world.

--- a/index.html
+++ b/index.html
@@ -2,12 +2,15 @@
 <html>
 
 <head>
-    <title>Complexity of Sorting Algorithms</title>
+    <title>Apphacker Projects</title>
 </head>
 
 <body>
     <div id="main">
-
+        <h1>Projects</h1>
+        <div>
+            <a href="/sorts/">Complexity of Sorting Algorithms</a>
+        </div>
     </div>
     <script type="text/javascript" src="./main.js"></script>
 </body>
