--- a/sorts/html/index.html
+++ b/sorts/html/index.html
@@ -2,11 +2,11 @@
 <html>
 
 <head>
-    <title>Complexity of Sorting Algorithms</title>
+    <title>The Complexity of Sorting Algorithms</title>
 </head>
 
 <body>
-    <h1>Complexity of Sorting Algorithms</h1>
+    <h1><a href="/"><span>The Complexity of Sorting Algorithms</span></a></h1>
     <div id="main">
 
     </div>
