Some amount of visual sort happening.

--- a/sorts/html/index.html
+++ b/sorts/html/index.html
@@ -2,13 +2,13 @@
 <html>
 
 <head>
-    <title>The Complexity of Sorting Algorithms</title>
+    <title>The Performance of Sorting Algorithms</title>
 </head>
 
 <body>
-    <h1><a href="/"><span>The Complexity of Sorting Algorithms</span></a></h1>
     <div id="main">
-
+        <h1><a href="/"><span>The Performance of Sorting Algorithms</span></a></h1>
+        <div id="app"></div>
     </div>
     <script src="./main.js"></script>
 </body>
