Pulling out the ticker, renaming project.

--- a/sorts/html/index.html
+++ b/sorts/html/index.html
@@ -2,12 +2,16 @@
 <html>
 
 <head>
-    <title>The Performance of Sorting Algorithms</title>
+    <title>A Visualization of Sorting Algorithms</title>
 </head>
 
 <body>
     <div id="main">
-        <h1><a href="/"><span>The Performance of Sorting Algorithms</span></a></h1>
+        <h1>
+            <a href="/">
+                <span>A Visualization of Sorting Algorithms</span>
+            </a>
+        </h1>
         <div id="app"></div>
     </div>
     <script src="./main.js"></script>
